// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Group should render correctly 1`] = `
<div>
  <div
    class="jsx-3272639465 group "
  >
    <label
      class="jsx-2611772628 "
    >
      <svg
        class="jsx-881160083"
        fill="none"
        height="12px"
        viewBox="0 0 12 12"
        width="12px"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          class="jsx-881160083"
          d="M8.5 0.5H3.5C1.84315 0.5 0.5 1.84315 0.5 3.5V8.5C0.5 10.1569 1.84315 11.5 3.5 11.5H8.5C10.1569 11.5 11.5 10.1569 11.5 8.5V3.5C11.5 1.84315 10.1569 0.5 8.5 0.5Z"
          stroke="#666"
        />
      </svg>
      <input
        class="jsx-2611772628"
        type="checkbox"
      />
      <span
        class="jsx-2611772628 text"
      >
        Sydney
      </span>
    </label>
  </div>
</div>
`;

exports[`Checkbox should render correctly 1`] = `
<div>
  <label
    class="jsx-2611772628 "
  >
    <svg
      class="jsx-881160083"
      fill="none"
      height="12px"
      viewBox="0 0 12 12"
      width="12px"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        class="jsx-881160083"
        d="M8.5 0.5H3.5C1.84315 0.5 0.5 1.84315 0.5 3.5V8.5C0.5 10.1569 1.84315 11.5 3.5 11.5H8.5C10.1569 11.5 11.5 10.1569 11.5 8.5V3.5C11.5 1.84315 10.1569 0.5 8.5 0.5Z"
        stroke="#666"
      />
    </svg>
    <input
      class="jsx-2611772628"
      type="checkbox"
    />
    <span
      class="jsx-2611772628 text"
    >
      Sydney
    </span>
  </label>
</div>
`;
